Additional padding and alignment fixes
Add `.large-12.columns` inside some additional `.row` elements, change track and module card titles to use flexbox for vertical text alignment, and left align track card stamps

--- a/source/assets/stylesheets/_foundation_overrides.scss
+++ b/source/assets/stylesheets/_foundation_overrides.scss
@@ -516,6 +516,6 @@ dl.accordion + dl.accordion {
 .top-bar {
   .name {
     height: auto;
-    padding: 26px 15px;
+    padding: 26px 30px;
   }
 }
