--- a/source/assets/stylesheets/_home.scss
+++ b/source/assets/stylesheets/_home.scss
@@ -208,7 +208,7 @@ $breakpoint: 800px;
 //color styles for different cards
 .card-green {
   &.head,
-  h3, h4 {
+  header, h4 {
     background-color: $light-green;
   }
 
@@ -228,7 +228,7 @@ $breakpoint: 800px;
 
 .card-yellow {
   &.head,
-  h3, h4 {
+  header, h4 {
     background-color: $font-yellow;
   }
 
@@ -248,7 +248,7 @@ $breakpoint: 800px;
 
 .card-orange {
   &.head,
-  h3, h4 {
+  header, h4 {
     background-color: $font-orange;
   }
 
@@ -268,7 +268,7 @@ $breakpoint: 800px;
 
 .card-pink {
   &.head,
-  h3, h4 {
+  header, h4 {
     background-color: $font-pink;
   }
 
@@ -288,7 +288,7 @@ $breakpoint: 800px;
 
 .card-blue {
   &.head,
-  h3, h4 {
+  header, h4 {
     background-color: $border-blue;
   }
 
@@ -308,7 +308,7 @@ $breakpoint: 800px;
 
 .card-brown {
   &.head,
-  h3, h4 {
+  header, h4 {
     background-color: $font-brown;
   }
 
@@ -328,7 +328,7 @@ $breakpoint: 800px;
 
 .card-light-brown {
   &.head,
-  h3, h4 {
+  header, h4 {
     background-color: $font-light-brown;
   }
 
@@ -348,7 +348,7 @@ $breakpoint: 800px;
 
 .card-purple {
   &.head,
-  h3, h4 {
+  header, h4 {
     background-color: $font-purple;
   }
 
@@ -368,7 +368,7 @@ $breakpoint: 800px;
 
 .card-pastel-green {
   &.head,
-  h3, h4 {
+  header, h4 {
     background-color: $font-pastel-green;
 
     span {
@@ -392,7 +392,7 @@ $breakpoint: 800px;
 
 .card-red {
   &.head,
-  h3, h4 {
+  header, h4 {
     background-color: $font-red;
   }
 
@@ -412,7 +412,7 @@ $breakpoint: 800px;
 
 .card-light-orange {
   &.head,
-  h3, h4 {
+  header, h4 {
     background-color: $font-light-orange;
   }
 
@@ -432,7 +432,7 @@ $breakpoint: 800px;
 
 .card-light-yellow {
   &.head,
-  h3, h4 {
+  header, h4 {
     background-color: $font-light-yellow;
   }
 
