--- a/source/assets/stylesheets/_modules.scss
+++ b/source/assets/stylesheets/_modules.scss
@@ -159,8 +159,10 @@
   position: relative;
 
   .header {
+    display: flex;
+    align-items: center;
     background-color: $font-yellow;
-    padding: 10px 20px;
+    padding: 0 20px;
     font-family: $raleway-font;
     font-size: 16px;
     font-weight: 400;
@@ -171,13 +173,8 @@
     text-transform: inherit;
 
     span {
-      position: absolute;
+      position: relative;
       z-index: 1;
-
-      &.title {
-        top: 25px;
-        margin-right: 30px;
-      }
     }
   }
 
