--- a/source/assets/stylesheets/_track.scss
+++ b/source/assets/stylesheets/_track.scss
@@ -168,7 +168,6 @@
   .medium-6 {
     @include tablet-portrait {
       width: 100%;
-      padding: 0 5%;
     }
   }
 
@@ -180,8 +179,10 @@
     padding: 10px;
     margin-bottom: 32px;
 
-    h3 {
-      padding: 30px 25px;
+    header {
+      display: flex;
+      align-items: center;
+      padding: 0 160px 0 25px;
       height: 120px;
       color: $font-black;
       font-family: $raleway-font;
@@ -189,19 +190,22 @@
       font-weight: 400;
       margin: 0;
 
-      span {
+      h3 {
+        flex: 1 1 auto;
         width: 46%;
         line-height: 31.2px;
         display: none;
+        margin: 0;
 
         //Mobile 640px above
         @include tablet {
           display: inline-block;
         }
 
-        &.time {
-          color: white;
+        .time {
+          padding-left: 1.5em;
           font-size: 16px;
+          white-space: nowrap;
         }
       }
     }
@@ -262,8 +266,8 @@
       }
     }
 
-    .row {
-      margin: 0;
+    .progress-and-social-share {
+      padding: 0 25px 10px;
     }
 
     ul.links {
@@ -313,7 +317,8 @@
   .tag-img {
     position: absolute;
     top: 20px;
-    width: 95%;
+    left: 0;
+    right: 0;
 
     @include tablet {
       right: 15px;
